// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlPiece renders accurately with and without props and children 1`] = `
<div
  className="controlPiece"
/>
`;

exports[`ControlPiece renders accurately with and without props and children 2`] = `
<div
  className="controlPiece test"
/>
`;

exports[`ControlPiece renders accurately with and without props and children 3`] = `
<div
  className="controlPiece"
>
  Test
</div>
`;
